WebKit Bugzilla
New
Browse
Search+
Log In
×
Sign in with GitHub
or
Remember my login
Create Account
·
Forgot Password
Forgotten password account recovery
RESOLVED FIXED
242947
Regression(
251783@main
) Back navigation after browsing source tree on GitHub unexpectedly skips history items
https://bugs.webkit.org/show_bug.cgi?id=242947
Summary
Regression(251783@main) Back navigation after browsing source tree on GitHub ...
Chris Dumez
Reported
2022-07-20 09:36:37 PDT
Back navigation after browsing source tree on GitHub unexpectedly skips history items since
251783@main
.
Attachments
Add attachment
proposed patch, testcase, etc.
Chris Dumez
Comment 1
2022-07-20 09:36:49 PDT
<
rdar://97031026
>
Chris Dumez
Comment 2
2022-07-20 09:47:46 PDT
Pull request:
https://github.com/WebKit/WebKit/pull/2583
EWS
Comment 3
2022-07-20 12:02:48 PDT
Committed
252649@main
(048c68aca363): <
https://commits.webkit.org/252649@main
> Reviewed commits have been landed. Closing PR #2583 and removing active labels.
Note
You need to
log in
before you can comment on or make changes to this bug.
Top of Page
Format For Printing
XML
Clone This Bug